@@ -4,4 +4,5 @@ Daniel Kaufhold
 
 Contributors (in alphabetical order)
 
+* Tobias Lorenz
 * Your name could stand here :)
