@@ -1,0 +1,96 @@
+"""Settings that need to be set in order to run the tests."""
+import os
+
+
+DEBUG = True
+SITE_ID = 1
+
+DATABASES = {
+    "default": {
+        "ENGINE": "django.db.backends.sqlite3",
+        "NAME": ":memory:",
+    }
+}
+
+USE_I18N = True
+
+LANGUAGE_CODE = 'en'
+
+LANGUAGES = (
+    ('en', 'English'),
+    ('de', 'German'),
+)
+
+ROOT_URLCONF = 'cmsplugin_outlets.tests.urls'
+
+STATIC_URL = '/static/'
+MEDIA_URL = '/media/'
+
+STATIC_ROOT = os.path.join(os.path.dirname(__file__), '../../static/')
+MEDIA_ROOT = os.path.join(os.path.dirname(__file__), '../../media/')
+
+STATICFILES_DIRS = (
+    os.path.join(os.path.dirname(__file__), 'test_static'),
+)
+
+MIDDLEWARE_CLASSES = (
+    'django.contrib.sessions.middleware.SessionMiddleware',
+    'django.middleware.csrf.CsrfViewMiddleware',
+    'django.contrib.auth.middleware.AuthenticationMiddleware',
+    'django.contrib.messages.middleware.MessageMiddleware',
+    'django.middleware.locale.LocaleMiddleware',
+    'django.middleware.common.CommonMiddleware',
+    'cms.middleware.page.CurrentPageMiddleware',
+    'cms.middleware.user.CurrentUserMiddleware',
+    'cms.middleware.toolbar.ToolbarMiddleware',
+    'cms.middleware.language.LanguageCookieMiddleware',
+)
+
+TEMPLATES = [{
+    'BACKEND': 'django.template.backends.django.DjangoTemplates',
+    'APP_DIRS': True,
+    'DIRS': [os.path.join(os.path.dirname(__file__), './templates')],
+    'OPTIONS': {
+        'context_processors': (
+            'django.contrib.auth.context_processors.auth',
+            'django.template.context_processors.i18n',
+            'django.template.context_processors.request',
+            'django.template.context_processors.media',
+            'django.template.context_processors.static',
+            'sekizai.context_processors.sekizai',
+        )
+    }
+}]
+
+EXTERNAL_APPS = [
+    'django.contrib.admin',
+    'django.contrib.admindocs',
+    'django.contrib.auth',
+    'django.contrib.contenttypes',
+    'django.contrib.messages',
+    'django.contrib.sessions',
+    'django.contrib.staticfiles',
+    'django.contrib.sitemaps',
+    'django.contrib.sites',
+    'cms',
+    'menus',
+    'treebeard',
+    'outlets',
+]
+
+INTERNAL_APPS = [
+    'cmsplugin_outlets',
+]
+
+INSTALLED_APPS = EXTERNAL_APPS + INTERNAL_APPS
+
+CMS_SOFTROOT = True
+CMS_PERMISSION = False
+CMS_SEO_FIELDS = True
+CMS_MENU_TITLE_OVERWRITE = True
+CMS_FRONTEND_LANGUAGES = ('en', 'de', )
+CMS_TEMPLATES = (
+    ('standard.html', 'Standard'),
+)
+
+SECRET_KEY = 'foobar'
