@@ -1,8 +1,5 @@
-django-nose
 coverage
-django-coverage
 ipdb
 flake8
-fabric
-factory_boy
-mock
+fabric3
+mixer
