@@ -1,5 +1,6 @@
 === (ongoing) ===
 
+- Prepared app for Django 1.9 and Python 3.5
 
 === 0.1 ===
 - Initial commit
